fixed design: typography, spacing, text structure, links, hover

--- a/continents/africa/kenya-revenue-authority.html
+++ b/continents/africa/kenya-revenue-authority.html
@@ -318,20 +318,20 @@
             <div class="space-y-4 bg-[#111436] p-8 border border-indigo-900 rounded-lg" id="method">
                 <h4 class="text-3xl font-medium text-purple-300">How the Breach Happened</h4>
                 <h1 class="text=xl font-medium">KRA's servers</h1>
-                <p class="pl-4">- The attackers were able to run arbitrary code on KRA's servers by taking advantage of a zero-day vulnerability in the popular Log4j logging package. Because of its broad use in many different applications and ease of exploitation, this vulnerability—known as Log4Shell—was very hazardous. After gaining access, the attackers used ransomware to encrypt important data, making it impossible for KRA employees to access. The exploitation of this weakness made it clear how crucial it is to patch vulnerabilities promptly and how important it is for businesses to keep up with new threats.
+                <p>The attackers were able to run arbitrary code on KRA's servers by taking advantage of a zero-day vulnerability in the popular Log4j logging package. Because of its broad use in many different applications and ease of exploitation, this vulnerability—known as Log4Shell—was very hazardous. After gaining access, the attackers used ransomware to encrypt important data, making it impossible for KRA employees to access. The exploitation of this weakness made it clear how crucial it is to patch vulnerabilities promptly and how important it is for businesses to keep up with new threats.
                 </p>
                 <h1 class="text=xl font-medium">Cybersecurity Infrastructure</h1>
-                <p class="pl-4">- The breach was further facilitated by KRA's lack of timely system updates and inadequate monitoring mechanisms. The organization's cybersecurity infrastructure did not have the necessary tools to detect and respond to the intrusion promptly.This delay allowed the attackers to encrypt significant amounts of data before any countermeasures could be implemented. The incident underscored the need for robust monitoring systems and regular security assessments to identify and address potential vulnerabilities proactively.</p>
+                <p>The breach was further facilitated by KRA's lack of timely system updates and inadequate monitoring mechanisms. The organization's cybersecurity infrastructure did not have the necessary tools to detect and respond to the intrusion promptly.This delay allowed the attackers to encrypt significant amounts of data before any countermeasures could be implemented. The incident underscored the need for robust monitoring systems and regular security assessments to identify and address potential vulnerabilities proactively.</p>
             </div>
 
 
             <div class="space-y-4" id="data-compromised">
                 <h4 class="text-3xl font-medium text-purple-300">Data Compromised</h4>
                 <h5 class="text-xl font-medium">Taxpayer Data</h5>
-                <p class="pl-4">- Sensitive taxpayer data, such as income information, tax return records, and personal identification numbers, were encrypted as a result of the ransomware attack. People were at serious danger of identity theft and financial fraud as a result of this data exposure. Concerns over the integrity and secrecy of the nation's tax system were also raised by the incident. Restoring the impacted data and guaranteeing the future security of its systems presented difficulties for KRA.</p>
+                <p>Sensitive taxpayer data, such as income information, tax return records, and personal identification numbers, were encrypted as a result of the ransomware attack. People were at serious danger of identity theft and financial fraud as a result of this data exposure. Concerns over the integrity and secrecy of the nation's tax system were also raised by the incident. Restoring the impacted data and guaranteeing the future security of its systems presented difficulties for KRA.</p>
 
                 <h5 class="text-xl font-medium">KRA's Internal Operational Data</h5>
-                <p class="pl-4">- In addition to taxpayer data, the attack also affected KRA's internal operational data and communications. This disruption hindered the organization's ability to carry out its functions effectively, leading to delays in tax processing and revenue collection. The loss of access to internal systems also impacted staff productivity and coordination. The incident highlighted the critical importance of securing not only customer-facing systems but also internal operational infrastructure.</p>
+                <p>In addition to taxpayer data, the attack also affected KRA's internal operational data and communications. This disruption hindered the organization's ability to carry out its functions effectively, leading to delays in tax processing and revenue collection. The loss of access to internal systems also impacted staff productivity and coordination. The incident highlighted the critical importance of securing not only customer-facing systems but also internal operational infrastructure.</p>
 
             </div>
 
@@ -340,19 +340,20 @@
                 <p class="text-justify">The impact of the cyberattack on KRA and its stakeholders was extensive. The organization suffered financial losses, reputational harm, and operational interruptions as a result of the breach. Businesses, taxpayers, and government revenue collection were all impacted by the brief service disruption. Public confidence in KRA's capacity to protect private data and ensure service continuity was damaged by the incident. KRA responded by strengthening its cybersecurity framework through personnel training, technology upgrades, and the adoption of stronger security measures. The intrusion served as a wake-up call for other government agencies and companies to examine and upgrade their cybersecurity postures. In order to safeguard public services and vital infrastructure, it also underlined the necessity of a coordinated national cybersecurity strategy.</p>
             </div>
 
-
-            <div>
-                <details class="rounded border shadow" open>
-                    <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
-                    References
-                    </summary>
-                    <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
-                    <ul class="list-disc list-inside space-y-1">
-                        <li>The Standard Kenya. (2022, September 20). KRA hit by cyberattack compromising services. https://www.standardmedia.co.ke/business/technology/article/2001456114/kra-hit-by-cyberattack</li>
-                        <li>Business Daily Africa. (2022, September 21). Cyber attack on KRA systems slows tax services. Retrieved from https://www.businessdailyafrica.com/bd/economy/cyber-attack-on-kra-systems-slows-tax-services-3954102</li>
+            <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
+                <div id="accordion-header" class="p-4 border-b border-indigo-900">
+                    <h5 class="text-purple-300 font-medium text-lg">Reference</h5>
+                </div>
+                <div class="p-4">
+                    <ul class="space-y-2">
+                        <li>
+                            <a class="text-blue-300 underline" href="https://www.standardmedia.co.ke/business/technology/article/2001456114/kra-hit-by-cyberattack">https://www.standardmedia.co.ke/business/technology/article/2001456114/kra-hit-by-cyberattack</a>
+                        </li>
+                        <li>
+                            <a class="text-blue-300 underline" href="https://www.businessdailyafrica.com/bd/economy/cyber-attack-on-kra-systems-slows-tax-services-3954102">https://www.businessdailyafrica.com/bd/economy/cyber-attack-on-kra-systems-slows-tax-services-3954102</a>
+                        </li>
                     </ul>
-                    </div>
-                </details>
+                </div>
             </div>
         </div>
 		
