--- a/continents/africa/transnet.html
+++ b/continents/africa/transnet.html
@@ -318,10 +318,10 @@
             <div class="space-y-4 bg-[#111436] p-8 border border-indigo-900 rounded-lg" id="method">
                 <h4 class="text-3xl font-medium text-purple-300">How the Breach Happened</h4>
                 <h1 class="text=xl font-medium">Ransomware</h1>
-                <p class="pl-4">- Critical data was encrypted and operations were disrupted when the attackers infiltrated Transnet's IT infrastructure with ransomware. Most likely, compromised remote access points or phishing emails allowed the malware to infiltrate the network. It spread laterally once inside, impacting several systems that are essential to port operations. This emphasizes how crucial it is to secure every point of entry and keep an eye on network activity.
+                <p>Critical data was encrypted and operations were disrupted when the attackers infiltrated Transnet's IT infrastructure with ransomware. Most likely, compromised remote access points or phishing emails allowed the malware to infiltrate the network. It spread laterally once inside, impacting several systems that are essential to port operations. This emphasizes how crucial it is to secure every point of entry and keep an eye on network activity.
                 </p>
                 <h1 class="text=xl font-medium">Antiquated Software and Systems</h1>
-                <p class="pl-4">- The ransomware assault was successful in part because Transnet relied on antiquated software and systems with known weaknesses. Modern security capabilities like behavioral threat identification and sophisticated encryption were absent from these outdated systems. The computers become a simple target for cybercriminals in the absence of frequent upgrades and fixes. The hack highlighted how urgently state-owned businesses must improve their IT systems.</p>
+                <p>The ransomware assault was successful in part because Transnet relied on antiquated software and systems with known weaknesses. Modern security capabilities like behavioral threat identification and sophisticated encryption were absent from these outdated systems. The computers become a simple target for cybercriminals in the absence of frequent upgrades and fixes. The hack highlighted how urgently state-owned businesses must improve their IT systems.</p>
             </div>
 
 
@@ -329,10 +329,10 @@
                 <h4 class="text-3xl font-medium text-purple-300">Data Compromised</h4>
                 <h5 class="text-xl font-medium">Operational Information
                 </h5>
-                <p class="pl-4">- Systems for scheduling and logistics that oversee port and freight operations were hacked by the ransomware attack. This interruption slowed the flow of products into and out of South Africa, stopped cargo processing, and delayed shipments. Port employees were unable to oversee ship docking and container monitoring due to a lack of access to schedule information. The nation's economy was affected by these disruptions, particularly during the COVID-19 recovery efforts.</p>
+                <p>Systems for scheduling and logistics that oversee port and freight operations were hacked by the ransomware attack. This interruption slowed the flow of products into and out of South Africa, stopped cargo processing, and delayed shipments. Port employees were unable to oversee ship docking and container monitoring due to a lack of access to schedule information. The nation's economy was affected by these disruptions, particularly during the COVID-19 recovery efforts.</p>
 
                 <h5 class="text-xl font-medium">Employee Information</h5>
-                <p class="pl-4">- Employee information, including names, ID numbers, and contact details, may have been compromised in addition to operational systems. This sparked worries about possible identity theft and improper use of private data. Internal staff systems were among those affected, however Transnet would not officially disclose the scope of the data leak. This demonstrated how crucial it is for breach response procedures to safeguard internal staff and customer data.</p>
+                <p>Employee information, including names, ID numbers, and contact details, may have been compromised in addition to operational systems. This sparked worries about possible identity theft and improper use of private data. Internal staff systems were among those affected, however Transnet would not officially disclose the scope of the data leak. This demonstrated how crucial it is for breach response procedures to safeguard internal staff and customer data.</p>
             </div>
 
             <div class="space-y-4" id="impact">
@@ -341,19 +341,21 @@
             </div>
 
 
-            <div>
-                <details class="rounded border shadow" open>
-                    <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
-                    References
-                    </summary>
-                    <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
-                    <ul class="list-disc list-inside space-y-1">
-                        <li>Timcke, S., & Rens, A. (2024, January 11). Bolstering South Africa’s Cyber Defenses: Policy Lessons from the 2021 Transnet Breach. Tech Policy Press. https://www.techpolicy.press/bolstering-south-africas-cyber-defenses-policy-lessons-from-the-2021-transnet-breach/</li>
-                        <li>Maritime ransomware | Blank Rome LLP. (2023, March 1).https://www.blankrome.com/publications/maritime-ransomware</li>
+            <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
+                <div id="accordion-header" class="p-4 border-b border-indigo-900">
+                    <h5 class="text-purple-300 font-medium text-lg">Reference</h5>
+                </div>
+                <div class="p-4">
+                    <ul class="space-y-2">
+                        <li>
+                            <a class="text-blue-300 underline" href="https://www.techpolicy.press/bolstering-south-africas-cyber-defenses-policy-lessons-from-the-2021-transnet-breach/">https://www.techpolicy.press/bolstering-south-africas-cyber-defenses-policy-lessons-from-the-2021-transnet-breach/</a>
+                        </li>
+                        <li>
+                            <a class="text-blue-300 underline" href="https://www.techpolicy.press/bolstering-south-africas-cyber-defenses-policy-lessons-from-the-2021-transnet-breach/">https://www.techpolicy.press/bolstering-south-africas-cyber-defenses-policy-lessons-from-the-2021-transnet-breach/</a>
+                        </li>
                     </ul>
-                    </div>
-                </details>
-            </div>
+                </div>
+            </div>  
         </div>
 		
 		
