--- a/continents/asia.html
+++ b/continents/asia.html
@@ -302,7 +302,7 @@
 
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 max-w-6xl mx-auto mt-24 gap-4 px-4">
         <!-- COMPANY 1 -->
-        <a href="#" class="relative w-full rounded-lg overflow-hidden shadow-lg group">
+        <a href="asia/sony-pictures.html" class="relative w-full rounded-lg overflow-hidden shadow-lg group">
             <img src="./assets/asia-sony-pictures.png" class="w-full h-96 object-cover transition-opacity duration-300" />
             <div class="absolute inset-0 bg-gray-900 opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
             <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
@@ -311,7 +311,7 @@
         </a>
 
         <!-- COMPANY 2 -->
-        <a href="#" class="relative w-full rounded-lg overflow-hidden shadow-lg group">
+        <a href="asia/tata-consultancy-solutions.html" class="relative w-full rounded-lg overflow-hidden shadow-lg group">
             <img src="./assets/asia-tata-consultancy-services.png" class="w-full h-96 object-cover transition-opacity duration-300" />
             <div class="absolute inset-0 bg-gray-900 opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
             <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
@@ -320,7 +320,7 @@
         </a>
 
         <!-- COMPANY 3 -->
-        <a href="#" class="relative w-full rounded-lg overflow-hidden shadow-lg group">
+        <a href="asia/air-india.html" class="relative w-full rounded-lg overflow-hidden shadow-lg group">
             <img src="./assets/asia-air-india.png" class="w-full h-96 object-cover transition-opacity duration-300" />
             <div class="absolute inset-0 bg-gray-900 opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
             <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
@@ -329,7 +329,7 @@
         </a>
 
         <!-- COMPANY 4 -->
-        <a href="#" class="relative w-full rounded-lg overflow-hidden shadow-lg group">
+        <a href="asia/bangladesh-bank.html" class="relative w-full rounded-lg overflow-hidden shadow-lg group">
             <img src="./assets/asia-bangladesh-bank.png" class="w-full h-96 object-cover transition-opacity duration-300" />
             <div class="absolute inset-0 bg-gray-900 opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
             <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
@@ -338,7 +338,7 @@
         </a>
 
         <!-- COMPANY 5 -->
-        <a href="#" class="relative w-full rounded-lg overflow-hidden shadow-lg group">
+        <a href="asia/shanghai-national-police.html" class="relative w-full rounded-lg overflow-hidden shadow-lg group">
             <img src="./assets/asia-shanghai-national-police.png" class="w-full h-96 object-cover transition-opacity duration-300" />
             <div class="absolute inset-0 bg-gray-900 opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
             <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
