--- a/continents/asia/air-india.html
+++ b/continents/asia/air-india.html
@@ -288,23 +288,23 @@
 			<div class="mt-24 max-w-5xl mx-auto">
                 <div class="space-y-4">
                     <div class="flex items-center text-gray-300 space-x-2">
-                        <a class="text-sm" href="../companies-affected.html">Companies Affected</a>
+                        <a class="text-sm" href="../../companies-affected.html">Companies Affected</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
+                        <a href="../../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="../continents/asia.html" class="text-sm">Asia</a>
+                        <a href="../asia.html" class="text-sm">Asia</a>
                         <span class="text-gray-300 text-sm">/</span>
                         <a href="#" class="text-sm">Air India</a>
                     </div>
                     <h4 class="font-semibold text-5xl">Air India</h4>
                     <div class="flex items-center space-x-6 mt-2 text-gray-300">
-                        <a href="#overview">Overview</a><p>|</p>
-                        <a href="#method">How it Happened</a><p>|</p>
-                        <a href="#data-compromised">Data Compromised</a><p>|</p>
+                        <a href="#overview">Overview</a>
+                        <a href="#method">How it Happened</a>
+                        <a href="#data-compromised">Data Compromised</a>
                         <a href="#impact">Impact on the Company and Customers</a>
                     </div>
                 </div>
-                <a href="./assets/air-india.png" target="image-viewer"><img src="./assets/air-india.png" class="w-full h-96 mt-10 object-cover rounded-lg filter grayscale-0 hover:grayscale transition duration-300"></a>
+                <a href="./assets/air-india.png" target="image-viewer"><img src="./assets/air-india.png" class="w-full h-96 mt-10 object-cover rounded-lg filter transition duration-300"></a>
 			</div>
 		</div>
 
@@ -318,19 +318,19 @@
             <div class="space-y-4 bg-[#111436] p-8 border border-indigo-900 rounded-lg" id="method">
                 <h4 class="text-3xl font-medium text-purple-300">How the Breach Happened</h4>
                 <h1 class="text=xl font-medium">Third-Party Vendor Vulnerabilities</h1>
-                <p class="pl-4 text-justify">- The Air India data breach originated from a cyberattack on the systems of SITA PSS, the third-party service provider responsible for managing Air India's passenger data. The attackers gained unauthorized access to SITA's servers, where Air India's customer information was stored. The exact vulnerability exploited by the attackers has not been publicly disclosed in detail, but the incident underscores the risks associated with entrusting sensitive data to third-party vendors and the importance of their security protocols.</p>
+                <p>The Air India data breach originated from a cyberattack on the systems of SITA PSS, the third-party service provider responsible for managing Air India's passenger data. The attackers gained unauthorized access to SITA's servers, where Air India's customer information was stored. The exact vulnerability exploited by the attackers has not been publicly disclosed in detail, but the incident underscores the risks associated with entrusting sensitive data to third-party vendors and the importance of their security protocols.</p>
                 <h1 class="text=xl font-medium">Delayed Detection and Response</h1>
-                <p class="pl-4 text-justify">- The attackers reportedly had access to SITA's systems for a period of 22 days, between February and March 2021, allowing them ample time to exfiltrate the vast amount of passenger data. Air India received the initial notification of the breach from SITA in late February but did not receive the specifics of the affected individuals until late March and early April. This delay in identifying the scope of the breach complicated Air India's response and notification process to its customers.</p>
+                <p>The attackers reportedly had access to SITA's systems for a period of 22 days, between February and March 2021, allowing them ample time to exfiltrate the vast amount of passenger data. Air India received the initial notification of the breach from SITA in late February but did not receive the specifics of the affected individuals until late March and early April. This delay in identifying the scope of the breach complicated Air India's response and notification process to its customers.</p>
             </div>
 
 
             <div class="space-y-4" id="data-compromised">
                 <h4 class="text-3xl font-medium text-purple-300">Data Compromised</h4>
                 <h5 class="text-xl font-medium">Passenger Information</h5>
-                <p class="pl-4 text-justify">- The extensive data compromised in the Air India breach included a variety of personal details of approximately 4.5 million passengers. This included names, dates of birth, contact information, passport details, and ticket information. The exposure of this type of data can significantly increase the risk of identity theft and other fraudulent activities for the affected individuals.</p>
+                <p>The extensive data compromised in the Air India breach included a variety of personal details of approximately 4.5 million passengers. This included names, dates of birth, contact information, passport details, and ticket information. The exposure of this type of data can significantly increase the risk of identity theft and other fraudulent activities for the affected individuals.</p>
 
                 <h5 class="text-xl font-medium">Payment and Frequent Flyer Information</h5>
-                <p class="pl-4 text-justify">- Notably, the compromised data also included credit card details, although Air India clarified that CVV/CVC numbers were not exposed in the incident. Additionally, the breach accessed Air India's frequent flyer data, potentially compromising the accounts of loyal customers. The wide range and sensitivity of the stolen information made this a significant data security incident with potential long-term consequences for the affected passengers.</p>
+                <p>Notably, the compromised data also included credit card details, although Air India clarified that CVV/CVC numbers were not exposed in the incident. Additionally, the breach accessed Air India's frequent flyer data, potentially compromising the accounts of loyal customers. The wide range and sensitivity of the stolen information made this a significant data security incident with potential long-term consequences for the affected passengers.</p>
             </div>
 
             <div class="space-y-4" id="impact">
@@ -339,18 +339,20 @@
             </div>
 
             <!-- REFERENCES -->
-            <div>
-                <details class="rounded border shadow" open>
-                    <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
-                    References
-                    </summary>
-                    <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
-                    <ul class="list-disc list-inside space-y-1">
-                        <li>ENS Economic Bureau. (2021, May 22). Air India flyers’ data leaked after cyberattack, 45 lakh affected. The Indian Express. https://indianexpress.com/article/india/ai-flyers-data-leaked-after-cyberattack-7325026/lite/</li>
-                        <li>Reuters. (2021, May 12). Heimkehr für Delivery Hero - Essenslieferdienst wieder in Deutschland aktiv. Reuters. https://www.reuters.com/article/us-air-india-cybersecurity-idUSKBN2CT0FV/</li>
+             <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
+                <div id="accordion-header" class="p-4 border-b border-indigo-900">
+                    <h5 class="text-purple-300 font-medium text-lg">Reference</h5>
+                </div>
+                <div class="p-4">
+                    <ul class="space-y-2">
+                        <li>
+                            <a class="text-blue-300 underline" href="https://indianexpress.com/article/india/ai-flyers-data-leaked-after-cyberattack-7325026/lite/">https://indianexpress.com/article/india/ai-flyers-data-leaked-after-cyberattack-7325026/lite/</a>
+                        </li>
+                        <li>
+                            <a class="text-blue-300 underline" href="https://www.reuters.com/article/us-air-india-cybersecurity-idUSKBN2CT0FV/">https://www.reuters.com/article/us-air-india-cybersecurity-idUSKBN2CT0FV/</a>
+                        </li>
                     </ul>
-                    </div>
-                </details>
+                </div>
             </div>
         </div>
 		
