--- a/continents/asia/bangladesh-bank.html
+++ b/continents/asia/bangladesh-bank.html
@@ -288,23 +288,23 @@
 			<div class="mt-24 max-w-5xl mx-auto">
                 <div class="space-y-4">
                     <div class="flex items-center text-gray-300 space-x-2">
-                        <a class="text-sm" href="../companies-affected.html">Companies Affected</a>
+                        <a class="text-sm" href="../../companies-affected.html">Companies Affected</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
+                        <a href="../../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="../continents/asia.html" class="text-sm">Asia</a>
+                        <a href="../asia.html" class="text-sm">Asia</a>
                         <span class="text-gray-300 text-sm">/</span>
                         <a href="#" class="text-sm">Bangladesh Bank</a>
                     </div>
                     <h4 class="font-semibold text-5xl">Bangladesh Bank</h4>
                     <div class="flex items-center space-x-6 mt-2 text-gray-300">
-                        <a href="#overview">Overview</a><p>|</p>
-                        <a href="#method">How it Happened</a><p>|</p>
-                        <a href="#data-compromised">Data Compromised</a><p>|</p>
+                        <a href="#overview">Overview</a>
+                        <a href="#method">How it Happened</a>
+                        <a href="#data-compromised">Data Compromised</a>
                         <a href="#impact">Impact on the Company and Customers</a>
                     </div>
                 </div>
-                <a href="./assets/bangladesh-bank.png" target="image-viewer"><img src="./assets/bangladesh-bank.png" class="w-full h-96 mt-10 object-cover rounded-lg filter grayscale-0 hover:grayscale transition duration-300"></a>
+                <a href="./assets/bangladesh-bank.png" target="image-viewer"><img src="./assets/bangladesh-bank.png" class="w-full h-96 mt-10 object-cover rounded-lg"></a>
 			</div>
 		</div>
 
@@ -318,19 +318,19 @@
             <div class="space-y-4 bg-[#111436] p-8 border border-indigo-900 rounded-lg" id="method">
                 <h4 class="text-3xl font-medium text-purple-300">How the Breach Happened</h4>
                 <h1 class="text=xl font-medium">Exploiting Prolonged Network Access</h1>
-                <p class="pl-4 text-justify">- The attackers are believed to have infiltrated Bangladesh Bank's computer network approximately a year before the actual theft. They likely used malware, potentially delivered through phishing emails to bank employees, to gain access and observe the bank's internal processes for payment transfers. This prolonged access allowed them to understand the SWIFT system's operations and obtain the necessary credentials for initiating fraudulent transactions.</p>
+                <p>The attackers are believed to have infiltrated Bangladesh Bank's computer network approximately a year before the actual theft. They likely used malware, potentially delivered through phishing emails to bank employees, to gain access and observe the bank's internal processes for payment transfers. This prolonged access allowed them to understand the SWIFT system's operations and obtain the necessary credentials for initiating fraudulent transactions.</p>
                 <h1 class="text=xl font-medium">Timing, Tactics, and the Flaws in SWIFT Security</h1>
-                <p class="pl-4 text-justify">- On a weekend in February 2016, when Bangladesh Bank's offices were closed, the hackers initiated 35 fraudulent payment requests through the SWIFT network, attempting to transfer close to $1 billion from the bank's account at the New York Fed to various accounts overseas. The timing of the attack during the bank's closure suggests a calculated effort to delay detection. While the majority of these requests were flagged by the banking system, five succeeded due to a combination of factors, including typos in some of the fraudulent instructions that bypassed certain security checks.</p>
+                <p>On a weekend in February 2016, when Bangladesh Bank's offices were closed, the hackers initiated 35 fraudulent payment requests through the SWIFT network, attempting to transfer close to $1 billion from the bank's account at the New York Fed to various accounts overseas. The timing of the attack during the bank's closure suggests a calculated effort to delay detection. While the majority of these requests were flagged by the banking system, five succeeded due to a combination of factors, including typos in some of the fraudulent instructions that bypassed certain security checks.</p>
             </div>
 
 
             <div class="space-y-4" id="data-compromised">
                 <h4 class="text-3xl font-medium text-purple-300">Data Compromised</h4>
                 <h5 class="text-xl font-medium">Credentials and Access Protocols</h5>
-                <p class="pl-4 text-justify">- The primary data compromised in this cyber heist were the credentials and access protocols for Bangladesh Bank's SWIFT system. By gaining control over these, the attackers were able to issue fraudulent payment instructions that appeared legitimate to the SWIFT network and the Federal Reserve Bank of New York. This unauthorized access to the bank's financial communication system was the key to executing the theft.</p>
+                <p>The primary data compromised in this cyber heist were the credentials and access protocols for Bangladesh Bank's SWIFT system. By gaining control over these, the attackers were able to issue fraudulent payment instructions that appeared legitimate to the SWIFT network and the Federal Reserve Bank of New York. This unauthorized access to the bank's financial communication system was the key to executing the theft.</p>
 
                 <h5 class="text-xl font-medium">Internal Bank Communications and Operational Details</h5>
-                <p class="pl-4 text-justify">- Additionally, the attackers likely gained access to internal bank communications and operational details during their prolonged presence within Bangladesh Bank's network. This reconnaissance would have provided them with the information needed to craft the fraudulent transfer requests and understand the bank's security procedures, allowing them to bypass some of the initial detection mechanisms.</p>
+                <p>Additionally, the attackers likely gained access to internal bank communications and operational details during their prolonged presence within Bangladesh Bank's network. This reconnaissance would have provided them with the information needed to craft the fraudulent transfer requests and understand the bank's security procedures, allowing them to bypass some of the initial detection mechanisms.</p>
             </div>
 
             <div class="space-y-4" id="impact">
@@ -339,19 +339,23 @@
             </div>
 
             <!-- REFERENCES -->
-            <div>
-                <details class="rounded border shadow" open>
-                    <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
-                    References
-                    </summary>
-                    <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
-                    <ul class="list-disc list-inside space-y-1">
-                        <li>Cardwell-Brown, A. (2023, March 16). The billion dollar heist: the inside story of the Bangladesh Bank cyberattack. https://www.linkedin.com/pulse/billion-dollar-heist-inside-story-bangladesh-bank-cardwell-brown</li>
-                        <li>Gonzalez, S. (2019, July 11). Malware: Bangladesh Bank Heist - ERMProtect Cybersecurity. ERMProtect Cybersecurity - Cybersecurity | Digital Forensics | Penetration Testing. https://ermprotect.com/blog/malware-bangladesh-bank-heist/</li>
-                        <li>Reports, S. (2016, July 21). How the New York Fed fumbled over the Bangladesh Bank cyber-heist. Reuters. https://www.reuters.com/investigates/special-report/cyber-heist-federal/</li>
+            <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
+                <div id="accordion-header" class="p-4 border-b border-indigo-900">
+                    <h5 class="text-purple-300 font-medium text-lg">Reference</h5>
+                </div>
+                <div class="p-4">
+                    <ul class="space-y-2">
+                        <li>
+                            <a class="text-blue-300 underline" href="https://www.linkedin.com/pulse/billion-dollar-heist-inside-story-bangladesh-bank-cardwell-brown">https://www.linkedin.com/pulse/billion-dollar-heist-inside-story-bangladesh-bank-cardwell-brown</a>
+                        </li>
+                        <li>
+                            <a class="text-blue-300 underline" href="https://ermprotect.com/blog/malware-bangladesh-bank-heist/">https://ermprotect.com/blog/malware-bangladesh-bank-heist/</a>
+                        </li>
+                        <li>
+                            <a class="text-blue-300 underline" href="https://www.reuters.com/investigates/special-report/cyber-heist-federal/">https://www.reuters.com/investigates/special-report/cyber-heist-federal/</a>
+                        </li>
                     </ul>
-                    </div>
-                </details>
+                </div>
             </div>
         </div>
 		
