--- a/continents/asia/shanghai-national-police.html
+++ b/continents/asia/shanghai-national-police.html
@@ -288,23 +288,23 @@
 			<div class="mt-24 max-w-5xl mx-auto">
                 <div class="space-y-4">
                     <div class="flex items-center text-gray-300 space-x-2">
-                        <a class="text-sm" href="../companies-affected.html">Companies Affected</a>
+                        <a class="text-sm" href="../../companies-affected.html">Companies Affected</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
+                        <a href="../../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="../continents/asia.html" class="text-sm">Asia</a>
+                        <a href="../asia.html" class="text-sm">Asia</a>
                         <span class="text-gray-300 text-sm">/</span>
                         <a href="#" class="text-sm">Shanghai National Police</a>
                     </div>
                     <h4 class="font-semibold text-5xl">Shanghai National Police</h4>
                     <div class="flex items-center space-x-6 mt-2 text-gray-300">
-                        <a href="#overview">Overview</a><p>|</p>
-                        <a href="#method">How it Happened</a><p>|</p>
-                        <a href="#data-compromised">Data Compromised</a><p>|</p>
+                        <a href="#overview">Overview</a>
+                        <a href="#method">How it Happened</a>
+                        <a href="#data-compromised">Data Compromised</a>
                         <a href="#impact">Impact on the Company and Customers</a>
                     </div>
                 </div>
-                <a href="./assets/shanghai-national-police.png" target="image-viewer"><img src="./assets/shanghai-national-police.png" class="w-full h-96 mt-10 object-cover rounded-lg filter grayscale-0 hover:grayscale transition duration-300"></a>
+                <a href="./assets/shanghai-national-police.png" target="image-viewer"><img src="./assets/shanghai-national-police.png" class="w-full h-96 mt-10 object-cover rounded-lg"></a>
 			</div>
 		</div>
 
@@ -318,20 +318,20 @@
             <div class="space-y-4 bg-[#111436] p-8 border border-indigo-900 rounded-lg" id="method">
                 <h4 class="text-3xl font-medium text-purple-300">How the Breach Happened</h4>
                 <h1 class="text=xl font-medium">Unsecured Backdoors and Security Lapses</h1>
-                <p class="pl-4 text-justify">- The precise vulnerability or method of access used to breach the Shanghai National Police Database has not been officially confirmed. However, reports suggest that the data may have been accessible through an unsecured backdoor link, potentially available since as early as April 2021, which would have allowed unauthorized access without requiring specific credentials. This indicates a potential lapse in basic security protocols for a highly sensitive database.</p>
+                <p>The precise vulnerability or method of access used to breach the Shanghai National Police Database has not been officially confirmed. However, reports suggest that the data may have been accessible through an unsecured backdoor link, potentially available since as early as April 2021, which would have allowed unauthorized access without requiring specific credentials. This indicates a potential lapse in basic security protocols for a highly sensitive database.</p>
                 
                 <h1 class="text=xl font-medium">Vulnerabilities in Cloud Security and Data Exfiltration</h1>
-                <p class="pl-4 text-justify">- Some reports have also implicated Alibaba's cloud platform, suggesting that the police database might have been hosted on their services with outdated security measures. Authorities reportedly scrutinized Alibaba's cloud platform following the breach. Additionally, the sheer volume of data exfiltrated (23 terabytes) suggests a significant period of undetected access or a highly efficient method of data extraction once the initial breach occurred.</p>
+                <p>Some reports have also implicated Alibaba's cloud platform, suggesting that the police database might have been hosted on their services with outdated security measures. Authorities reportedly scrutinized Alibaba's cloud platform following the breach. Additionally, the sheer volume of data exfiltrated (23 terabytes) suggests a significant period of undetected access or a highly efficient method of data extraction once the initial breach occurred.</p>
             </div>
 
 
             <div class="space-y-4" id="data-compromised">
                 <h4 class="text-3xl font-medium text-purple-300">Data Compromised</h4>
                 <h5 class="text-xl font-medium">Personal Data on a National Scale</h5>
-                <p class="pl-4 text-justify">- The leaked data purportedly includes an extensive range of highly sensitive personal information for over one billion Chinese citizens. This includes fundamental identity details such as names, addresses, birthplaces, and national identification numbers, as well as contact information like phone numbers and even photos. The availability of such comprehensive personal data on a massive scale poses a significant risk of identity theft, fraud, and potential surveillance.</p>
+                <p>The leaked data purportedly includes an extensive range of highly sensitive personal information for over one billion Chinese citizens. This includes fundamental identity details such as names, addresses, birthplaces, and national identification numbers, as well as contact information like phone numbers and even photos. The availability of such comprehensive personal data on a massive scale poses a significant risk of identity theft, fraud, and potential surveillance.</p>
 
                 <h5 class="text-xl font-medium">Privacy and Law Enforcement Integrity</h5>
-                <p class="pl-4 text-justify">- Beyond basic personal information, the breach allegedly exposed detailed police case records. These records could include sensitive information about individuals involved in criminal investigations, including victims, witnesses, and suspects. The disclosure of such data could have severe implications for privacy, personal safety, and the integrity of law enforcement processes.</p>
+                <p>Beyond basic personal information, the breach allegedly exposed detailed police case records. These records could include sensitive information about individuals involved in criminal investigations, including victims, witnesses, and suspects. The disclosure of such data could have severe implications for privacy, personal safety, and the integrity of law enforcement processes.</p>
             </div>
 
             <div class="space-y-4" id="impact">
@@ -340,19 +340,29 @@
             </div>
 
             <!-- REFERENCES -->
-            <div>
-                <details class="rounded border shadow" open>
-                    <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
-                    References
-                    </summary>
-                    <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
-                    <ul class="list-disc list-inside space-y-1">
-                        <li>Fallout from Shanghai National Police Data Breach Continues. (n.d.). https://www.asisonline.org/security-management-magazine/latest-news/today-in-security/2022/july/shanghai-breach-fallout/</li>
-                        <li>Reuters. (2022, July 6). Hacker claims to have stolen 1 bln records of Chinese citizens from police. Reuters. https://www.reuters.com/world/china/hacker-claims-have-stolen-1-bln-records-chinese-citizens-police-2022-07-04/</li>
-                        <li>Vicens, A. (2022, July 27). Fallout from massive Shanghai Police data breach reverberates on dark web. CyberScoop. https://cyberscoop.com/shanghai-data-breach-1-billion-dark-web/</li>
+            <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
+                <div id="accordion-header" class="p-4 border-b border-indigo-900">
+                    <h5 class="text-purple-300 font-medium text-lg">References</h5>
+                </div>
+                <div class="p-4">
+                    <ul class="space-y-2">
+                        <li>
+                            <a class="text-blue-300 underline" href="https://www.asisonline.org/security-management-magazine/latest-news/today-in-security/2022/july/shanghai-breach-fallout/" target="_blank">
+                                Fallout from Shanghai National Police Data Breach Continues
+                            </a>
+                        </li>
+                        <li>
+                            <a class="text-blue-300 underline" href="https://www.reuters.com/world/china/hacker-claims-have-stolen-1-bln-records-chinese-citizens-police-2022-07-04/" target="_blank"></a>
+                                Reuters: Hacker claims to have stolen 1 bln records of Chinese citizens from police
+                            </a>
+                        </li>
+                        <li>
+                            <a class="text-blue-300 underline" href="https://cyberscoop.com/shanghai-data-breach-1-billion-dark-web/" target="_blank">
+                                Vicens, A. (2022, July 27). Fallout from massive Shanghai Police data breach reverberates on dark web
+                            </a>
+                        </li>
                     </ul>
-                    </div>
-                </details>
+                </div>
             </div>
         </div>
 		
