--- a/continents/australia-oceania.html
+++ b/continents/australia-oceania.html
@@ -303,7 +303,7 @@
         
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 max-w-6xl mx-auto mt-24 gap-4 px-4">
             <!-- COMPANY 1 -->
-            <a href="../companies-australia/medibank.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+            <a href="australia/medibank.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="./assets/australia-medibank.png" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
@@ -312,7 +312,7 @@
             </a>
 
             <!-- COMPANY 2 -->
-            <a href="../companies-australia/optus.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+            <a href="australia/optus.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="./assets/australia-optus.png" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
@@ -321,7 +321,7 @@
             </a>
 
             <!-- COMPANY 3 -->
-            <a href="../companies-australia/lion-dairy-drink.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+            <a href="australia/lion-dairy-drink.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="./assets/australia-lion-dairy-drinks.png" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
@@ -330,7 +330,7 @@
             </a>
 
             <!-- COMPANY 4 -->
-            <a href="../companies-australia/abc.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+            <a href="australia/abc.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="./assets/australia-abc-core.png" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
@@ -339,7 +339,7 @@
             </a>
 
             <!-- COMPANY 5 -->
-            <a href="../companies-australia/latitude-financial.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+            <a href="australia/latitude-financial.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="./assets/australia-latitude-financial-services.png" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
