--- a/continents/australia/latitude-financial.html
+++ b/continents/australia/latitude-financial.html
@@ -288,23 +288,23 @@
 			<div class="mt-24 max-w-5xl mx-auto">
                 <div class="space-y-4">
                     <div class="flex items-center text-gray-300 space-x-2">
-                        <a class="text-sm" href="../companies-affected.html">Companies Affected</a>
+                        <a class="text-sm" href="../../companies-affected.html">Companies Affected</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
+                        <a href="../../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="../continents/australia-oceania.html" class="text-sm">Australia/Oceania</a>
+                        <a href="../australia-oceania.html" class="text-sm">Australia/Oceania</a>
                         <span class="text-gray-300 text-sm">/</span>
                         <a href="#" class="text-sm">Latitude Financial</a>
                     </div>
                     <h4 class="font-semibold text-5xl">Latitude Financial</h4>
                     <div class="flex items-center space-x-6 mt-2 text-gray-300">
-                        <a href="#overview">Overview</a><p>|</p>
-                        <a href="#method">How it Happened</a><p>|</p>
-                        <a href="#data-compromised">Data Compromised</a><p>|</p>
+                        <a href="#overview">Overview</a>
+                        <a href="#method">How it Happened</a>
+                        <a href="#data-compromised">Data Compromised</a>
                         <a href="#impact">Impact on the Company and Customers</a>
                     </div>
                 </div>
-                <a href="./assets/latitude-financial.png" target="image-viewer"><img src="./assets/latitude-financial.png" class="w-full h-96 mt-10 object-cover rounded-lg filter grayscale-0 hover:grayscale transition duration-300"></a>
+                <a href="./assets/latitude-financial.png" target="image-viewer"><img src="./assets/latitude-financial.png" class="w-full h-96 mt-10 object-cover rounded-lg"></a>
 			</div>
 		</div>
 
@@ -318,11 +318,11 @@
             <div class="space-y-4 bg-[#111436] p-8 border border-indigo-900 rounded-lg" id="method">
                 <h4 class="text-3xl font-medium text-purple-300">How the Breach Happened</h4>
                 <h1 class="text=xl font-medium">Compromised Employee Credentials</h1>
-                <p class="pl-4 text-justify">- The attackers obtained login credentials of Latitude Financial employees, possibly through phishing or social engineering tactics. With these credentials, they accessed systems managed by third-party service providers. This unauthorized access allowed the exfiltration of vast amounts of customer data. The incident emphasizes the need for stringent access controls and employee cybersecurity training</p>
+                The attackers obtained login credentials of Latitude Financial employees, possibly through phishing or social engineering tactics. With these credentials, they accessed systems managed by third-party service providers. This unauthorized access allowed the exfiltration of vast amounts of customer data. The incident emphasizes the need for stringent access controls and employee cybersecurity training</p>
                 <h1 class="text=xl font-medium">Inadequate Monitoring and Detection</h1>
-                <p class="pl-4 text-justify">- The breach remained undetected for a period, suggesting shortcomings in system monitoring and threat detection capabilities. Effective monitoring tools and protocols are essential for early detection of unauthorized activities. Implementing real-time alerts and regular system audits can mitigate such risks. This aspect of the breach highlights the importance of proactive cybersecurity measures.</p>
+                The breach remained undetected for a period, suggesting shortcomings in system monitoring and threat detection capabilities. Effective monitoring tools and protocols are essential for early detection of unauthorized activities. Implementing real-time alerts and regular system audits can mitigate such risks. This aspect of the breach highlights the importance of proactive cybersecurity measures.</p>
                 <h1 class="text=xl font-medium">Lack of Multi-Factor Authentication (MFA)</h1>
-                <p class="pl-4 text-justify">- The absence or insufficient implementation of MFA may have facilitated unauthorized access using compromised credentials. MFA adds an additional layer of security, making it more difficult for attackers to gain access. Organizations should enforce MFA across all critical systems and user accounts. This breach underscores the necessity of adopting comprehensive authentication mechanisms.
+                The absence or insufficient implementation of MFA may have facilitated unauthorized access using compromised credentials. MFA adds an additional layer of security, making it more difficult for attackers to gain access. Organizations should enforce MFA across all critical systems and user accounts. This breach underscores the necessity of adopting comprehensive authentication mechanisms.
 </p>
             </div>
 
@@ -330,13 +330,13 @@
             <div class="space-y-4" id="data-compromised">
                 <h4 class="text-3xl font-medium text-purple-300">Data Compromised</h4>
                 <h5 class="text-xl font-medium">Passport Numbers</h5>
-                <p class="pl-4 text-justify">- The breach included the theft of around 53,000 passport numbers. Exposure of such sensitive identification documents poses significant risks of identity theft and fraud. Affected individuals may face challenges in securing their identities and may need to replace compromised documents. This incident highlights the critical need for secure storage and handling of personal identification information</p>
+                The breach included the theft of around 53,000 passport numbers. Exposure of such sensitive identification documents poses significant risks of identity theft and fraud. Affected individuals may face challenges in securing their identities and may need to replace compromised documents. This incident highlights the critical need for secure storage and handling of personal identification information</p>
 
                 <h5 class="text-xl font-medium">Personal Contact Information</h5>
-                <p class="pl-4 text-justify">- Approximately 6.1 million customer records containing names, addresses, phone numbers, and dates of birth were compromised. This information can be exploited for targeted phishing attacks and other malicious activities. Individuals affected by the breach may experience increased unsolicited communications and potential scams. Organizations must ensure robust protection of personal contact information to maintain customer trust.</p>
+                Approximately 6.1 million customer records containing names, addresses, phone numbers, and dates of birth were compromised. This information can be exploited for targeted phishing attacks and other malicious activities. Individuals affected by the breach may experience increased unsolicited communications and potential scams. Organizations must ensure robust protection of personal contact information to maintain customer trust.</p>
 
                 <h5 class="text-xl font-medium">Financial Statements</h5>
-                <p class="pl-4 text-justify">- Less than 100 current and former customers had their monthly financial statements accessed. While this number is relatively small, the exposure of financial data can lead to unauthorized transactions and financial fraud. Affected customers may need to monitor their accounts closely and take preventive measures. This aspect of the breach underscores the importance of safeguarding financial information.</p>
+                Less than 100 current and former customers had their monthly financial statements accessed. While this number is relatively small, the exposure of financial data can lead to unauthorized transactions and financial fraud. Affected customers may need to monitor their accounts closely and take preventive measures. This aspect of the breach underscores the importance of safeguarding financial information.</p>
             </div>
 
             <div class="space-y-4" id="impact">
@@ -346,7 +346,7 @@
 
             <!-- REFERENCES -->
             <div>
-                <details class="rounded border shadow" open>
+                <details class="rounded border border-indigo-900 shadow" open>
                     <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
                     References
                     </summary>
