--- a/continents/australia/medibank.html
+++ b/continents/australia/medibank.html
@@ -288,23 +288,23 @@
 			<div class="mt-24 max-w-5xl mx-auto">
                 <div class="space-y-4">
                     <div class="flex items-center text-gray-300 space-x-2">
-                        <a class="text-sm" href="../companies-affected.html">Companies Affected</a>
+                        <a class="text-sm" href="../../companies-affected.html">Companies Affected</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
+                        <a href="../../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="../continents/australia-oceania.html" class="text-sm">Australia/Oceania</a>
+                        <a href="../australia-oceania.html" class="text-sm">Australia/Oceania</a>
                         <span class="text-gray-300 text-sm">/</span>
                         <a href="#" class="text-sm">Medibank</a>
                     </div>
                     <h4 class="font-semibold text-5xl">Medibank</h4>
                     <div class="flex items-center space-x-6 mt-2 text-gray-300">
-                        <a href="#overview">Overview</a><p>|</p>
-                        <a href="#method">How it Happened</a><p>|</p>
-                        <a href="#data-compromised">Data Compromised</a><p>|</p>
+                        <a href="#overview">Overview</a>
+                        <a href="#method">How it Happened</a>
+                        <a href="#data-compromised">Data Compromised</a>
                         <a href="#impact">Impact on the Company and Customers</a>
                     </div>
                 </div>
-                <a href="./assets/medibank.png" target="image-viewer"><img src="./assets/medibank.png" class="w-full h-96 mt-10 object-cover rounded-lg filter grayscale-0 hover:grayscale transition duration-300"></a>
+                <a href="./assets/medibank.png" target="image-viewer"><img src="./assets/medibank.png" class="w-full h-96 mt-10 object-cover rounded-lg"></a>
 			</div>
 		</div>
 
@@ -318,24 +318,24 @@
             <div class="space-y-4 bg-[#111436] p-8 border border-indigo-900 rounded-lg" id="method">
                 <h4 class="text-3xl font-medium text-purple-300">How the Breach Happened</h4>
                 <h1 class="text=xl font-medium">Compromised Contractor Credentials</h1>
-                <p class="pl-4 text-justify">-  Attackers gained access by obtaining login credentials from a third-party IT contractor. The credentials were stored on a personal device that had been infected with malware. Once obtained, the attackers used these details to access Medibank’s internal systems. No advanced techniques were required due to poor credential security practices.</p>
+                 Attackers gained access by obtaining login credentials from a third-party IT contractor. The credentials were stored on a personal device that had been infected with malware. Once obtained, the attackers used these details to access Medibank’s internal systems. No advanced techniques were required due to poor credential security practices.</p>
                 <h1 class="text=xl font-medium">Lack of Multi-Factor Authentication (MFA)</h1>
-                <p class="pl-4 text-justify">- At the time of the breach, Medibank did not have MFA enabled for its remote systems. This allowed attackers to log in using stolen credentials without further verification. MFA could have prevented or at least delayed access by requiring a second authentication factor. Its absence exposed a major weakness in Medibank’s cybersecurity posture.</p>
+                At the time of the breach, Medibank did not have MFA enabled for its remote systems. This allowed attackers to log in using stolen credentials without further verification. MFA could have prevented or at least delayed access by requiring a second authentication factor. Its absence exposed a major weakness in Medibank’s cybersecurity posture.</p>
                 <h1 class="text=xl font-medium">Unaddressed Security Alerts</h1>
-                <p class="pl-4 text-justify">- Medibank's internal monitoring tools flagged suspicious activity early in the breach timeline. However, these alerts were not properly escalated or acted upon by the security team. This delay allowed attackers to remain in the system undetected for weeks, exfiltrating large volumes of data. The failure to respond promptly highlighted critical weaknesses in Medibank’s incident response process.</p>
+                Medibank's internal monitoring tools flagged suspicious activity early in the breach timeline. However, these alerts were not properly escalated or acted upon by the security team. This delay allowed attackers to remain in the system undetected for weeks, exfiltrating large volumes of data. The failure to respond promptly highlighted critical weaknesses in Medibank’s incident response process.</p>
             </div>
 
 
             <div class="space-y-4" id="data-compromised">
                 <h4 class="text-3xl font-medium text-purple-300">Data Compromised</h4>
                 <h5 class="text-xl font-medium">Personal Information</h5>
-                <p class="pl-4 text-justify">- The attackers accessed personal details of customers, including names, addresses, dates of birth, phone numbers, and email addresses . This information can be used for identity theft, phishing attacks, and other malicious activities . The exposure of such data has caused significant concern among affected individuals . Medibank has advised customers to remain vigilant and monitor their accounts for suspicious activity.</p>
+                The attackers accessed personal details of customers, including names, addresses, dates of birth, phone numbers, and email addresses . This information can be used for identity theft, phishing attacks, and other malicious activities . The exposure of such data has caused significant concern among affected individuals . Medibank has advised customers to remain vigilant and monitor their accounts for suspicious activity.</p>
 
                 <h5 class="text-xl font-medium">Health Information</h5>
-                <p class="pl-4 text-justify">- Sensitive health data, including Medicare numbers and health claims information, was also compromised . The breach exposed details of medical procedures and diagnoses, raising serious privacy concerns . The unauthorized release of health information can have profound implications for individuals' privacy and well-being . The incident has prompted discussions about the need for stricter data protection measures in the healthcare sector .</p>
+                Sensitive health data, including Medicare numbers and health claims information, was also compromised . The breach exposed details of medical procedures and diagnoses, raising serious privacy concerns . The unauthorized release of health information can have profound implications for individuals' privacy and well-being . The incident has prompted discussions about the need for stricter data protection measures in the healthcare sector .</p>
 
                 <h5 class="text-xl font-medium">Identity Document Numbers</h5>
-                <p class="pl-4 text-justify">- For some affected individuals, passport numbers and visa details were compromised. This particularly impacted international students and overseas customers. Exposure of identity documents increases the risk of identity fraud and illegal use. Victims may face long-term complications in securing travel and financial services.</p>
+                For some affected individuals, passport numbers and visa details were compromised. This particularly impacted international students and overseas customers. Exposure of identity documents increases the risk of identity fraud and illegal use. Victims may face long-term complications in securing travel and financial services.</p>
             </div>
 
             <div class="space-y-4" id="impact">
@@ -345,7 +345,7 @@
 
             <!-- REFERENCES -->
             <div>
-                <details class="rounded border shadow" open>
+                <details class="rounded border border-indigo-900 shadow" open>
                     <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
                     References
                     </summary>
