--- a/continents/australia/optus.html
+++ b/continents/australia/optus.html
@@ -288,23 +288,23 @@
 			<div class="mt-24 max-w-5xl mx-auto">
                 <div class="space-y-4">
                     <div class="flex items-center text-gray-300 space-x-2">
-                        <a class="text-sm" href="../companies-affected.html">Companies Affected</a>
+                        <a class="text-sm" href="../../companies-affected.html">Companies Affected</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
+                        <a href="../../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="../continents/australia-oceania.html" class="text-sm">Australia/Oceania</a>
+                        <a href="../australia-oceania.html" class="text-sm">Australia/Oceania</a>
                         <span class="text-gray-300 text-sm">/</span>
                         <a href="#" class="text-sm">Optus</a>
                     </div>
                     <h4 class="font-semibold text-5xl">Optus</h4>
                     <div class="flex items-center space-x-6 mt-2 text-gray-300">
-                        <a href="#overview">Overview</a><p>|</p>
-                        <a href="#method">How it Happened</a><p>|</p>
-                        <a href="#data-compromised">Data Compromised</a><p>|</p>
+                        <a href="#overview">Overview</a>
+                        <a href="#method">How it Happened</a>
+                        <a href="#data-compromised">Data Compromised</a>
                         <a href="#impact">Impact on the Company and Customers</a>
                     </div>
                 </div>
-                <a href="./assets/optus.png" target="image-viewer"><img src="./assets/optus.png" class="w-full h-96 mt-10 object-cover rounded-lg filter grayscale-0 hover:grayscale transition duration-300"></a>
+                <a href="./assets/optus.png" target="image-viewer"><img src="./assets/optus.png" class="w-full h-96 mt-10 object-cover rounded-lg"></a>
 			</div>
 		</div>
 
@@ -318,24 +318,24 @@
             <div class="space-y-4 bg-[#111436] p-8 border border-indigo-900 rounded-lg" id="method">
                 <h4 class="text-3xl font-medium text-purple-300">How the Breach Happened</h4>
                 <h1 class="text=xl font-medium">Unauthorized Access</h1>
-                <p class="pl-4 text-justify">-  Attackers gained unauthorized access to Lion's network, likely through phishing emails or exploiting vulnerabilities in remote access systems. Once inside the network, they deployed ransomware to encrypt files and systems. The encryption rendered critical data and applications inaccessible, halting business operations. Such attacks often exploit weak security controls and lack of employee awareness.</p>
+                 Attackers gained unauthorized access to Lion's network, likely through phishing emails or exploiting vulnerabilities in remote access systems. Once inside the network, they deployed ransomware to encrypt files and systems. The encryption rendered critical data and applications inaccessible, halting business operations. Such attacks often exploit weak security controls and lack of employee awareness.</p>
                 <h1 class="text=xl font-medium">Lack of Segmentation</h1>
-                <p class="pl-4 text-justify">- The ransomware spread rapidly across Lion's network, suggesting insufficient network segmentation. Proper segmentation can contain malware outbreaks by isolating systems and limiting lateral movement. The widespread impact indicates that the company's network architecture allowed the ransomware to propagate unchecked. This highlights the importance of implementing network segmentation as a cybersecurity best practice.</p>
+                The ransomware spread rapidly across Lion's network, suggesting insufficient network segmentation. Proper segmentation can contain malware outbreaks by isolating systems and limiting lateral movement. The widespread impact indicates that the company's network architecture allowed the ransomware to propagate unchecked. This highlights the importance of implementing network segmentation as a cybersecurity best practice.</p>
                 <h1 class="text=xl font-medium">Delayed Detection and Response</h1>
-                <p class="pl-4 text-justify">- The attack's success suggests a delay in detecting and responding to the intrusion. Effective monitoring and incident response capabilities are crucial for identifying and mitigating cyber threats promptly. The delay allowed the attackers to encrypt a significant portion of the company's systems. This underscores the need for robust security monitoring and rapid response protocols.</p>
+                The attack's success suggests a delay in detecting and responding to the intrusion. Effective monitoring and incident response capabilities are crucial for identifying and mitigating cyber threats promptly. The delay allowed the attackers to encrypt a significant portion of the company's systems. This underscores the need for robust security monitoring and rapid response protocols.</p>
             </div>
 
 
             <div class="space-y-4" id="data-compromised">
                 <h4 class="text-3xl font-medium text-purple-300">Data Compromised</h4>
                 <h5 class="text-xl font-medium">Employee Information</h5>
-                <p class="pl-4 text-justify">- Personal details of employees, such as contact information and payroll data, may have been compromised. Exposure of such data can lead to identity theft and financial fraud. Employees may also become targets for phishing attacks using the stolen information. Protecting employee data is essential to maintaining trust and security within an organization.</p>
+                Personal details of employees, such as contact information and payroll data, may have been compromised. Exposure of such data can lead to identity theft and financial fraud. Employees may also become targets for phishing attacks using the stolen information. Protecting employee data is essential to maintaining trust and security within an organization.</p>
 
                 <h5 class="text-xl font-medium">Supplier and Customer Data</h5>
-                <p class="pl-4 text-justify">- Information related to suppliers and customers, including contracts and transaction records, may have been accessed. Compromise of this data can disrupt business relationships and lead to financial losses. Suppliers and customers may also be at risk if their information is misused. Ensuring the security of third-party data is a critical aspect of cybersecurity.</p>
+                Information related to suppliers and customers, including contracts and transaction records, may have been accessed. Compromise of this data can disrupt business relationships and lead to financial losses. Suppliers and customers may also be at risk if their information is misused. Ensuring the security of third-party data is a critical aspect of cybersecurity.</p>
 
                 <h5 class="text-xl font-medium">Intellectual Property</h5>
-                <p class="pl-4 text-justify">- Proprietary recipes, product formulations, and strategic plans could have been exposed. Loss of intellectual property can undermine competitive advantage and result in financial harm. Such breaches may also lead to regulatory scrutiny and legal challenges. Protecting intellectual property is vital for sustaining innovation and market position.</p>
+                Proprietary recipes, product formulations, and strategic plans could have been exposed. Loss of intellectual property can undermine competitive advantage and result in financial harm. Such breaches may also lead to regulatory scrutiny and legal challenges. Protecting intellectual property is vital for sustaining innovation and market position.</p>
             </div>
 
             <div class="space-y-4" id="impact">
@@ -345,7 +345,7 @@
 
             <!-- REFERENCES -->
             <div>
-                <details class="rounded border shadow" open>
+                <details class="rounded border border-indigo-900 shadow" open>
                     <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
                     References
                     </summary>
