--- a/continents/europe/british-airway.html
+++ b/continents/europe/british-airway.html
@@ -288,11 +288,11 @@
 			<div class="mt-24 max-w-5xl mx-auto">
                 <div class="space-y-4">
                     <div class="flex items-center text-gray-300 space-x-2">
-                        <a class="text-sm" href="#">Companies Affected</a>
+                        <a class="text-sm" href="../../companies-affected.html">Companies Affected</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="#" class="text-sm">Famous Cyber Attacked Companies</a>
+                        <a href="../../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="#" class="text-sm">Europe</a>
+                        <a href="../europe.html" class="text-sm">Europe</a>
                         <span class="text-gray-300 text-sm">/</span>
                         <a href="#" class="text-sm">British Airways</a>
                     </div>
@@ -303,7 +303,7 @@
                         <a href="#data-compromised">Data Compromised</a>
                     </div>
                 </div>
-                <img src="../assets/british.jpg" class="w-full h-96 mt-10 object-cover rounded-lg ">
+                <img src="../../assets/british.jpg" class="w-full h-96 mt-10 object-cover rounded-lg ">
                 
 			</div>
 		</div>
@@ -318,21 +318,21 @@
             <div class="space-y-4 bg-[#111436] p-8 border border-indigo-900 rounded-lg" id="method">
                 <h4 class="text-3xl font-medium text-purple-300">How the Breach Happened</h4>
                 <h1 class="text=xl font-medium">Injection of Malicious JavaScript via Third-Party Scripts</h1>
-                <p class="pl-4">- By inserting malicious JavaScript into third-party scripts, hackers took advantage of a weakness in the British Airways website. As the customer provided their information, this script collected it secretly on the payment page. It got past standard security checks since it seemed to be from a reliable source. For weeks, the intrusion went unnoticed, enabling extensive data collecting.
+                <p>By inserting malicious JavaScript into third-party scripts, hackers took advantage of a weakness in the British Airways website. As the customer provided their information, this script collected it secretly on the payment page. It got past standard security checks since it seemed to be from a reliable source. For weeks, the intrusion went unnoticed, enabling extensive data collecting.
 
                 </p>
                 <h1 class="text=xl font-medium">Exploitation of Third-Party Code Vulnerability</h1>
-                <p class="pl-4">- The attackers exploited a vulnerability in third-party code used by the site, enabling them to inject a script that mirrored legitimate site behavior. When customers entered their payment details, the malicious script captured and transmitted the information to the attackers. Since the code appeared to be trusted, it was not flagged by security systems, allowing the breach to persist undetected.</p>
+                <p>The attackers exploited a vulnerability in third-party code used by the site, enabling them to inject a script that mirrored legitimate site behavior. When customers entered their payment details, the malicious script captured and transmitted the information to the attackers. Since the code appeared to be trusted, it was not flagged by security systems, allowing the breach to persist undetected.</p>
             </div>
 
 
             <div class="space-y-4" id="data-compromised">
                 <h4 class="text-3xl font-medium text-purple-300">Data Compromised</h4>
                 <h5 class="text-xl font-medium">Personal Identifiable Information (PII) Leaked</h5>
-                <p class="pl-4">- During the incident, customer names, email addresses, and physical addresses were obtained. Identity fraud and phishing attacks can both leverage this kind of information. Additionally, users are at long-term danger of impersonation when such facts are made public. Consumers were cautioned to remain alert and keep an eye out for any questionable communications.</p>
+                <p>During the incident, customer names, email addresses, and physical addresses were obtained. Identity fraud and phishing attacks can both leverage this kind of information. Additionally, users are at long-term danger of impersonation when such facts are made public. Consumers were cautioned to remain alert and keep an eye out for any questionable communications.</p>
 
                 <h5 class="text-xl font-medium">Financial and Account Credentials Stolen</h5>
-                <p class="pl-4">- During purchases, complete credit card information, including CVV numbers, was stolen in real time. Additionally, attackers gained access to login information, including passwords and usernames. This made it possible for customers other than British Airways to have their accounts accessed without authorization. Users who were impacted were required to update their passwords for several services and replace their cards.</p>
+                <p>During purchases, complete credit card information, including CVV numbers, was stolen in real time. Additionally, attackers gained access to login information, including passwords and usernames. This made it possible for customers other than British Airways to have their accounts accessed without authorization. Users who were impacted were required to update their passwords for several services and replace their cards.</p>
 
             </div>
         </div>
