--- a/continents/europe/merck.html
+++ b/continents/europe/merck.html
@@ -288,11 +288,11 @@
 			<div class="mt-24 max-w-5xl mx-auto">
                 <div class="space-y-4">
                     <div class="flex items-center text-gray-300 space-x-2">
-                        <a class="text-sm" href="#">Companies Affected</a>
+                        <a class="text-sm" href="../../companies-affected.html">Companies Affected</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="#" class="text-sm">Famous Cyber Attacked Companies</a>
+                        <a href="../../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="#" class="text-sm">Europe</a>
+                        <a href="../europe.html" class="text-sm">Europe</a>
                         <span class="text-gray-300 text-sm">/</span>
                         <a href="#" class="text-sm">Merck</a>
                     </div>
@@ -303,7 +303,7 @@
                         <a href="#data-compromised">Data Compromised</a>
                     </div>
                 </div>
-                <img src="../assets/merck.avif" class="w-full h-96 mt-10 object-cover rounded-lg ">
+                <img src="../../assets/merck.avif" class="w-full h-96 mt-10 object-cover rounded-lg ">
                 
 			</div>
 		</div>
@@ -318,20 +318,20 @@
             <div class="space-y-4 bg-[#111436] p-8 border border-indigo-900 rounded-lg" id="method">
                 <h4 class="text-3xl font-medium text-purple-300">How the Breach Happened</h4>
                 <h1 class="text=xl font-medium">Initial Infection via M.E.Doc and Exploitation of EternalBlue</h1>
-                <p class="pl-4">- Through a corrupted upgrade to a Ukrainian accounting program named M.E.Doc, the NotPetya malware gained access to systems. Merck did not deploy the program, but once within a global network, the malware's worm-like characteristics allowed it to spread quickly. The EternalBlue exploit, a flaw in Microsoft's SMB protocol that was made public by the hacker collective Shadow Brokers, was used in the attack. Systems were left unprotected and susceptible to infection, even if they had not yet installed the available Windows fixes.
+                <p>Through a corrupted upgrade to a Ukrainian accounting program named M.E.Doc, the NotPetya malware gained access to systems. Merck did not deploy the program, but once within a global network, the malware's worm-like characteristics allowed it to spread quickly. The EternalBlue exploit, a flaw in Microsoft's SMB protocol that was made public by the hacker collective Shadow Brokers, was used in the attack. Systems were left unprotected and susceptible to infection, even if they had not yet installed the available Windows fixes.
                 </p>
                 <h1 class="text=xl font-medium">Destructive Payload and Impact on Merck's Operations</h1>
-                <p class="pl-4">- NotPetya was a "wiper" that permanently corrupted data, yet it functioned similarly to ransomware. Without complete backups, recovery would be impossible because it encrypted systems and erased important boot information. The quick spread was facilitated by Merck's network segmentation and antiquated security protocols. Systems utilized for email correspondence, logistics, and potentially medicine manufacture were rendered inoperable by the infection.</p>
+                <p>NotPetya was a "wiper" that permanently corrupted data, yet it functioned similarly to ransomware. Without complete backups, recovery would be impossible because it encrypted systems and erased important boot information. The quick spread was facilitated by Merck's network segmentation and antiquated security protocols. Systems utilized for email correspondence, logistics, and potentially medicine manufacture were rendered inoperable by the infection.</p>
             </div>
 
 
             <div class="space-y-4" id="data-compromised">
                 <h4 class="text-3xl font-medium text-purple-300">Data Compromised</h4>
                 <h5 class="text-xl font-medium">Operational Disruption and System Recovery</h5>
-                <p class="pl-4">- The attack resulted in a significant loss of operational data but did not target financial or personal data. Important documents and systems pertaining to internal logistics and medication production were made unavailable. Shipments of medications were delayed and vaccine production was temporarily stopped down as a result of the damage. Over the course of several months, Merck was forced to rebuild the impacted systems using backups.</p>
+                <p>The attack resulted in a significant loss of operational data but did not target financial or personal data. Important documents and systems pertaining to internal logistics and medication production were made unavailable. Shipments of medications were delayed and vaccine production was temporarily stopped down as a result of the damage. Over the course of several months, Merck was forced to rebuild the impacted systems using backups.</p>
 
                 <h5 class="text-xl font-medium"> Communication Breakdowns and Supply Chain Issues</h5>
-                <p class="pl-4">- Email, scheduling, and documentation tools were among the communication platforms that experienced disruptions. In the immediate aftermath, this led to lost production and internal disarray. Delays and difficulties with fulfillment resulted from the impact on supply chain systems as well. For a while, Merck was unable to provide important drugs like Gardasil and other vaccines.</p>
+                <p>Email, scheduling, and documentation tools were among the communication platforms that experienced disruptions. In the immediate aftermath, this led to lost production and internal disarray. Delays and difficulties with fulfillment resulted from the impact on supply chain systems as well. For a while, Merck was unable to provide important drugs like Gardasil and other vaccines.</p>
 
             </div>
         </div>
