--- a/continents/europe/national-health-service.html
+++ b/continents/europe/national-health-service.html
@@ -288,11 +288,11 @@
 			<div class="mt-24 max-w-5xl mx-auto">
                 <div class="space-y-4">
                     <div class="flex items-center text-gray-300 space-x-2">
-                        <a class="text-sm" href="#">Companies Affected</a>
+                        <a class="text-sm" href="../../companies-affected.html">Companies Affected</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="#" class="text-sm">Famous Cyber Attacked Companies</a>
+                        <a href="../../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="#" class="text-sm">Europe</a>
+                        <a href="../europe.html" class="text-sm">Europe</a>
                         <span class="text-gray-300 text-sm">/</span>
                         <a href="#" class="text-sm">National Health Service</a>
                     </div>
@@ -303,7 +303,7 @@
                         <a href="#data-compromised">Data Compromised</a>
                     </div>
                 </div>
-                <img src="../assets/nhs.webp" class="w-full h-96 mt-10 object-cover rounded-lg ">
+                <img src="../../assets/nhs.webp" class="w-full h-96 mt-10 object-cover rounded-lg ">
                 
 			</div>
 		</div>
@@ -318,21 +318,21 @@
             <div class="space-y-4 bg-[#111436] p-8 border border-indigo-900 rounded-lg" id="method">
                 <h4 class="text-3xl font-medium text-purple-300">How the Breach Happened</h4>
                 <h1 class="text=xl font-medium">Exploitation of EternalBlue Vulnerability in Windows SMB</h1>
-                <p class="pl-4">- The WannaCry ransomware specifically used an exploit called EternalBlue to take advantage of a flaw in the Windows Server Message Block (SMB) protocol. The United States is said to have created this exploit. leaked by a group known as The Shadow Brokers and the National Security Agency. Many NHS systems were still unpatched at the time of the assault, even though Microsoft released a patch for the vulnerability in March 2017. The malware encrypted information and demanded Bitcoin ransom payments as it quickly spread over networks.
+                <p>The WannaCry ransomware specifically used an exploit called EternalBlue to take advantage of a flaw in the Windows Server Message Block (SMB) protocol. The United States is said to have created this exploit. leaked by a group known as The Shadow Brokers and the National Security Agency. Many NHS systems were still unpatched at the time of the assault, even though Microsoft released a patch for the vulnerability in March 2017. The malware encrypted information and demanded Bitcoin ransom payments as it quickly spread over networks.
 
                 </p>
                 <h1 class="text=xl font-medium">NHS Vulnerabilities Due to Outdated Systems and Weak Security</h1>
-                <p class="pl-4">- The NHS's reliance on outdated operating systems, such Windows XP, which Microsoft no longer supported, made the attack easier. Furthermore, there was inadequate investment in IT infrastructure and a deficiency of strong cybersecurity standards. Although the NHS had previously been alerted to these vulnerabilities, insufficient action had been taken to resolve them. The NHS was especially vulnerable to the attack because of its antiquated systems and lax security procedures.</p>
+                <p>The NHS's reliance on outdated operating systems, such Windows XP, which Microsoft no longer supported, made the attack easier. Furthermore, there was inadequate investment in IT infrastructure and a deficiency of strong cybersecurity standards. Although the NHS had previously been alerted to these vulnerabilities, insufficient action had been taken to resolve them. The NHS was especially vulnerable to the attack because of its antiquated systems and lax security procedures.</p>
             </div>
 
 
             <div class="space-y-4" id="data-compromised">
                 <h4 class="text-3xl font-medium text-purple-300">Data Compromised</h4>
                 <h5 class="text-xl font-medium">No Data Stolen, But Patient Care Disrupted</h5>
-                <p class="pl-4">- Operational interruption was the main consequence, though there were initial concerns about the exposure of patient data. Investigations later confirmed that no patient data was stolen or compromised during the attack. Instead, the ransomware encrypted data, rendering it inaccessible. This caused delays in treatment due to healthcare workers being unable to access patient records when needed.</p>
+                <p>Operational interruption was the main consequence, though there were initial concerns about the exposure of patient data. Investigations later confirmed that no patient data was stolen or compromised during the attack. Instead, the ransomware encrypted data, rendering it inaccessible. This caused delays in treatment due to healthcare workers being unable to access patient records when needed.</p>
 
                 <h5 class="text-xl font-medium">Loss of Access to Operational and Scheduling Data</h5>
-                <p class="pl-4">- Critical operational data, such as internal communications and appointment schedules, was encrypted by the malware. This caused severe disruption to hospital workflows, forcing many services to revert to manual processes. The NHS’s ability to provide timely care was significantly hindered, and the situation underscored the importance of reliable data backup systems, as restoring operations took substantial time and effort.</p>
+                <p>Critical operational data, such as internal communications and appointment schedules, was encrypted by the malware. This caused severe disruption to hospital workflows, forcing many services to revert to manual processes. The NHS’s ability to provide timely care was significantly hindered, and the situation underscored the importance of reliable data backup systems, as restoring operations took substantial time and effort.</p>
 
             </div>
         </div>
