--- a/continents/europe/travelex.html
+++ b/continents/europe/travelex.html
@@ -288,13 +288,13 @@
 			<div class="mt-24 max-w-5xl mx-auto">
                 <div class="space-y-4">
                     <div class="flex items-center text-gray-300 space-x-2">
-                        <a class="text-sm" href="#">Companies Affected</a>
+                        <a class="text-sm" href="../../companies-affected.html">Companies Affected</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="#" class="text-sm">Famous Cyber Attacked Companies</a>
+                        <a href="../../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="#" class="text-sm">Europe</a>
+                        <a href="../europe.html" class="text-sm">Europe</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="#" class="text-sm">Trvelex</a>
+                        <a href="#" class="text-sm">Travelex</a>
                     </div>
                     <h4 class="font-semibold text-5xl">Travelex</h4>
                     <div class="flex items-center space-x-6 mt-2 text-gray-300">
@@ -303,7 +303,7 @@
                         <a href="#data-compromised">Data Compromised</a>
                     </div>
                 </div>
-                <img src="../assets/travel.jpeg" class="w-full h-96 mt-10 object-cover rounded-lg ">
+                <img src="../../assets/travel.jpeg" class="w-full h-96 mt-10 object-cover rounded-lg ">
                 
 			</div>
 		</div>
@@ -318,21 +318,21 @@
             <div class="space-y-4 bg-[#111436] p-8 border border-indigo-900 rounded-lg" id="method">
                 <h4 class="text-3xl font-medium text-purple-300">How the Breach Happened</h4>
                 <h1 class="text=xl font-medium">Network Access Through Unpatched VPN and Ransomware Deployment</h1>
-                <p class="pl-4">- Attackers gained access to the Travelex network by exploiting unpatched vulnerabilities in the company’s VPN servers. Once inside, they deployed the Sodinokibi ransomware, which encrypted critical systems and data. The malware spread rapidly across both internal systems and customer-facing platforms. This widespread impact was facilitated by delayed patching and a lack of effective network segmentation, allowing the ransomware to propagate without containment.
+                <p>Attackers gained access to the Travelex network by exploiting unpatched vulnerabilities in the company’s VPN servers. Once inside, they deployed the Sodinokibi ransomware, which encrypted critical systems and data. The malware spread rapidly across both internal systems and customer-facing platforms. This widespread impact was facilitated by delayed patching and a lack of effective network segmentation, allowing the ransomware to propagate without containment.
 
                 </p>
                 <h1 class="text=xl font-medium">Ransom Demands, Data Theft, and Delayed Response</h1>
-                <p class="pl-4">- After encrypting important data, the attackers issued a ransom note demanding payment. In addition to encryption, they stole sensitive data including client and transaction information—and threatened to publish it if their demands were not met. Travelex's slow response and initial reluctance to disclose the full scope of the attack allowed the attackers to further infiltrate systems, which significantly complicated recovery efforts.</p>
+                <p>After encrypting important data, the attackers issued a ransom note demanding payment. In addition to encryption, they stole sensitive data including client and transaction information—and threatened to publish it if their demands were not met. Travelex's slow response and initial reluctance to disclose the full scope of the attack allowed the attackers to further infiltrate systems, which significantly complicated recovery efforts.</p>
             </div>
 
 
             <div class="space-y-4" id="data-compromised">
                 <h4 class="text-3xl font-medium text-purple-300">Data Compromised</h4>
                 <h5 class="text-xl font-medium">Theft of Financial and Personally Identifiable Information (PII)</h5>
-                <p class="pl-4">-Approximately 5GB of sensitive data was stolen, including financial transaction records and personally identifiable information such as names, addresses, and payment details. Some credit card information was also compromised, raising the risk of identity theft and fraud. The breach prompted serious concerns about the security of personal financial data, especially in the context of international currency exchange operations.</p>
+                <p>Approximately 5GB of sensitive data was stolen, including financial transaction records and personally identifiable information such as names, addresses, and payment details. Some credit card information was also compromised, raising the risk of identity theft and fraud. The breach prompted serious concerns about the security of personal financial data, especially in the context of international currency exchange operations.</p>
 
                 <h5 class="text-xl font-medium">Exposure of Transactional Data and Reputational Damage</h5>
-                <p class="pl-4">- The ransomware attack also resulted in the public exposure of transaction records, including payment histories, transaction IDs, exchange amounts, and processing dates. While the breach was not directly linked to financial losses, the risk of fraudulent activity remained. The incident caused reputational harm to both Travelex and its banking partners, especially in terms of the integrity and confidentiality of customer transaction data.</p>
+                <p>The ransomware attack also resulted in the public exposure of transaction records, including payment histories, transaction IDs, exchange amounts, and processing dates. While the breach was not directly linked to financial losses, the risk of fraudulent activity remained. The incident caused reputational harm to both Travelex and its banking partners, especially in terms of the integrity and confidentiality of customer transaction data.</p>
 
             </div>
         </div>
