--- a/continents/europe/vodafone.html
+++ b/continents/europe/vodafone.html
@@ -288,11 +288,11 @@
 			<div class="mt-24 max-w-5xl mx-auto">
                 <div class="space-y-4">
                     <div class="flex items-center text-gray-300 space-x-2">
-                        <a class="text-sm" href="#">Companies Affected</a>
+                        <a class="text-sm" href="../../companies-affected.html">Companies Affected</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="#" class="text-sm">Famous Cyber Attacked Companies</a>
+                        <a href="../../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="#" class="text-sm">Europe</a>
+                        <a href="../europe.html" class="text-sm">Europe</a>
                         <span class="text-gray-300 text-sm">/</span>
                         <a href="#" class="text-sm">Vodafone</a>
                     </div>
@@ -303,7 +303,7 @@
                         <a href="#data-compromised">Data Compromised</a>
                     </div>
                 </div>
-                <img src="../assets/vodafone.jpg" class="w-full h-96 mt-10 object-cover rounded-lg ">
+                <img src="../../assets/vodafone.jpg" class="w-full h-96 mt-10 object-cover rounded-lg ">
                 
 			</div>
 		</div>
@@ -318,23 +318,23 @@
             <div class="space-y-4 bg-[#111436] p-8 border border-indigo-900 rounded-lg" id="method">
                 <h4 class="text-3xl font-medium text-purple-300">How the Breach Happened</h4>
                 <h1 class="text=xl font-medium">Exploitation of System Weaknesses and Lack of Monitoring</h1>
-                <p class="pl-4">- Hackers obtained unauthorized access to consumer data by taking advantage of flaws in Vodafone Iceland's systems. Sensitive data was extracted from the company’s infrastructure after attackers bypassed existing security safeguards. The breach was made possible by inadequate security protocols and a lack of system access monitoring. Due to the absence of strong intrusion detection systems, the attackers were able to remain undetected for a significant period.
+                <p>Hackers obtained unauthorized access to consumer data by taking advantage of flaws in Vodafone Iceland's systems. Sensitive data was extracted from the company’s infrastructure after attackers bypassed existing security safeguards. The breach was made possible by inadequate security protocols and a lack of system access monitoring. Due to the absence of strong intrusion detection systems, the attackers were able to remain undetected for a significant period.
 
                 </p>
                 <h1 class="text=xl font-medium">Public Disclosure and Delayed Response Intensify Impact</h1>
-                <p class="pl-4">- The situation worsened when the compromised data was publicly posted online, drawing widespread attention. This led to public and regulatory criticism of Vodafone’s delayed response and failure to notify affected customers promptly. The incident emphasized the importance of transparency and timely communication in the wake of a data breach.</p>
+                <p>The situation worsened when the compromised data was publicly posted online, drawing widespread attention. This led to public and regulatory criticism of Vodafone’s delayed response and failure to notify affected customers promptly. The incident emphasized the importance of transparency and timely communication in the wake of a data breach.</p>
             </div>
 
 
             <div class="space-y-4" id="data-compromised">
                 <h4 class="text-3xl font-medium text-purple-300">Data Compromised</h4>
                 <h5 class="text-xl font-medium">Exposure of Personal Identifiable Information (PII)</h5>
-                <p class="pl-4">- The breach exposed a range of personal information, including names, social security numbers, and contact details. This type of data is highly valuable for identity theft and other malicious activities. As a result, Vodafone faced pressure to support and protect impacted customers, given the serious risks associated with the exposure of such sensitive data.
+                <p>The breach exposed a range of personal information, including names, social security numbers, and contact details. This type of data is highly valuable for identity theft and other malicious activities. As a result, Vodafone faced pressure to support and protect impacted customers, given the serious risks associated with the exposure of such sensitive data.
 
 </p>
 
                 <h5 class="text-xl font-medium">Risk of Account Access Through Encrypted Credential</h5>
-                <p class="pl-4">- In addition to PII, the attackers accessed encrypted passwords and other account-related information. While the passwords were encrypted, concerns remained about the potential for them to be cracked and used to access client accounts. The breach underscored the need for multi-factor authentication (MFA) and strong password policies. Customers were advised to change their passwords immediately and to monitor their accounts for suspicious activity.</p>
+                <p>In addition to PII, the attackers accessed encrypted passwords and other account-related information. While the passwords were encrypted, concerns remained about the potential for them to be cracked and used to access client accounts. The breach underscored the need for multi-factor authentication (MFA) and strong password policies. Customers were advised to change their passwords immediately and to monitor their accounts for suspicious activity.</p>
 
             </div>
         </div>
