--- a/continents/north-america/equifax.html
+++ b/continents/north-america/equifax.html
@@ -288,13 +288,13 @@
 			<div class="mt-24 max-w-5xl mx-auto">
                 <div class="space-y-4">
                     <div class="flex items-center text-gray-300 space-x-2">
-                        <a class="text-sm" href="../companies-affected.html">Companies Affected</a>
+                        <a class="text-sm" href="../../companies-affected.html">Companies Affected</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
+                        <a href="../../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="../continents/north-america.html" class="text-sm">North America</a>
+                        <a href="../../continents/north-america.html" class="text-sm">North America</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="../companies-north-america/equifax.html" class="text-sm">Equifax</a>
+                        <a href="#" class="text-sm">Equifax</a>
                     </div>
                     <h4 class="font-semibold text-5xl">Equifax</h4>
                     <div class="flex items-center space-x-6 mt-2 text-gray-300">
@@ -303,7 +303,7 @@
                         <a href="#data-compromised">Data Compromised</a>
                     </div>
                 </div>
-                <img src="../assets/pictiure-north-america/equifax.webp" class="w-full h-96 mt-10 object-cover rounded-lg ">
+                <img src="../../assets/pictiure-north-america/equifax.webp" class="w-full h-96 mt-10 object-cover rounded-lg ">
                 
 			</div>
 		</div>
