--- a/continents/africa/libya-telecom-technology.html
+++ b/continents/africa/libya-telecom-technology.html
@@ -318,20 +318,20 @@
             <div class="space-y-4 bg-[#111436] p-8 border border-indigo-900 rounded-lg" id="method">
                 <h4 class="text-3xl font-medium text-purple-300">How the Breach Happened</h4>
                 <h1 class="text=xl font-medium">DDoS Attacks</h1>
-                <p class="pl-4">- The attackers launched extensive DDoS attacks against LTT, overwhelming the company's servers with excessive traffic.These attacks were designed to disrupt normal operations by saturating the network bandwidth, rendering services inaccessible to legitimate users. The scale of the attacks was unprecedented in Libya, indicating a high level of coordination and resources on the part of the attackers. The persistent nature of the attacks suggested that they were part of a sustained campaign to destabilize the country's telecommunications infrastructure.
+                <p>The attackers launched extensive DDoS attacks against LTT, overwhelming the company's servers with excessive traffic.These attacks were designed to disrupt normal operations by saturating the network bandwidth, rendering services inaccessible to legitimate users. The scale of the attacks was unprecedented in Libya, indicating a high level of coordination and resources on the part of the attackers. The persistent nature of the attacks suggested that they were part of a sustained campaign to destabilize the country's telecommunications infrastructure.
                 </p>
                 <h1 class="text=xl font-medium">Cybersecurity Infrastructure</h1>
-                <p class="pl-4">- The effectiveness of the attacks was exacerbated by Libya's inadequate cybersecurity infrastructure. Many of the systems in place were outdated and lacked the necessary safeguards to detect and mitigate such threats. Furthermore, the absence of a comprehensive national cybersecurity policy meant that there was no coordinated response to the attacks. This lack of preparedness left LTT and other communication companies vulnerable to ongoing and future cyber threats.</p>
+                <p>The effectiveness of the attacks was exacerbated by Libya's inadequate cybersecurity infrastructure. Many of the systems in place were outdated and lacked the necessary safeguards to detect and mitigate such threats. Furthermore, the absence of a comprehensive national cybersecurity policy meant that there was no coordinated response to the attacks. This lack of preparedness left LTT and other communication companies vulnerable to ongoing and future cyber threats.</p>
             </div>
 
 
             <div class="space-y-4" id="data-compromised">
                 <h4 class="text-3xl font-medium text-purple-300">Data Compromised</h4>
                 <h5 class="text-xl font-medium">Personal Communications and Business Operations</h5>
-                <p class="pl-4">- The primary impact of the DDoS attacks was the widespread disruption of internet services provided by LTT. Users across Libya experienced intermittent connectivity issues, affecting both personal communications and business operations. The disruptions had a cascading effect on various sectors reliant on internet connectivity, including finance, healthcare, and education. The instability of internet services also hindered access to critical information and emergency services.</p>
+                <p>The primary impact of the DDoS attacks was the widespread disruption of internet services provided by LTT. Users across Libya experienced intermittent connectivity issues, affecting both personal communications and business operations. The disruptions had a cascading effect on various sectors reliant on internet connectivity, including finance, healthcare, and education. The instability of internet services also hindered access to critical information and emergency services.</p>
 
                 <h5 class="text-xl font-medium">Operational Data</h5>
-                <p class="pl-4">- Although the primary goal of the DDoS attacks was to disrupt services, there was a chance that system vulnerabilities could expose sensitive operational data, and the absence of strong security measures could allow attackers to gain unauthorized access to internal systems, which could compromise sensitive data, including user data and internal communications. The extent of data exposure is still unknown because of the lack of transparency and reporting mechanisms.</p>
+                <p>Although the primary goal of the DDoS attacks was to disrupt services, there was a chance that system vulnerabilities could expose sensitive operational data, and the absence of strong security measures could allow attackers to gain unauthorized access to internal systems, which could compromise sensitive data, including user data and internal communications. The extent of data exposure is still unknown because of the lack of transparency and reporting mechanisms.</p>
 
             </div>
 
@@ -340,19 +340,20 @@
                 <p class="text-justify">The cyberattacks had significant repercussions for both LTT and its customers. For the corporation, the attacks showed major gaps in its cybersecurity architecture, mandating immediate investments in system improvements and security processes. The disruptions also lead to a loss of client trust and potential financial losses owing to service outages. Conversely, customers encountered difficulties in carrying out business operations, communicating clearly, and gaining access to necessary services. A number of industries were impacted by the unreliability of internet connections, which had a wider effect on the national economy. The incidents emphasized the significance of having a comprehensive national cybersecurity plan to protect vital infrastructure. Increased international cooperation has been demanded in response in order to improve Libya's cybersecurity capabilities and resistance to potential threats.</p>
             </div>
 
-
-            <div>
-                <details class="rounded border shadow" open>
-                    <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
-                    References
-                    </summary>
-                    <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
-                    <ul class="list-disc list-inside space-y-1">
-                        <li>The Libya Observer. (2023, August 3). LTT suffers major cyberattack, internet services disrupted. https://libyaobserver.ly/news/libya-telecom-technology-hit-cyberattack</li>
-                        <li>BleepingComputer. (2023). Hackers target Libya’s largest internet provider. https://www.bleepingcomputer.com/news/security/libya-telecom-technology-targeted-in-cyberattack/</li>
+            <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
+                <div id="accordion-header" class="p-4 border-b border-indigo-900">
+                    <h5 class="text-purple-300 font-medium text-lg">Reference</h5>
+                </div>
+                <div class="p-4">
+                    <ul class="space-y-2">
+                        <li>
+                            <a class="text-blue-300 underline" href="https://libyaobserver.ly/news/libya-telecom-technology-hit-cyberattack">https://libyaobserver.ly/news/libya-telecom-technology-hit-cyberattack</a>
+                        </li>
+                        <li>
+                            <a class="text-blue-300 underline" href="https://www.bleepingcomputer.com/news/security/libya-telecom-technology-targeted-in-cyberattack/">https://www.bleepingcomputer.com/news/security/libya-telecom-technology-targeted-in-cyberattack/</a>
+                        </li>
                     </ul>
-                    </div>
-                </details>
+                </div>
             </div>
         </div>
 		
