--- a/continents/asia/tata-consultancy-solutions.html
+++ b/continents/asia/tata-consultancy-solutions.html
@@ -288,23 +288,23 @@
 			<div class="mt-24 max-w-5xl mx-auto">
                 <div class="space-y-4">
                     <div class="flex items-center text-gray-300 space-x-2">
-                        <a class="text-sm" href="../companies-affected.html">Companies Affected</a>
+                        <a class="text-sm" href="../../companies-affected.html">Companies Affected</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
+                        <a href="../../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="../continents/asia.html" class="text-sm">Asia</a>
+                        <a href="../asia.html" class="text-sm">Asia</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="#" class="text-sm">Tata Consultancy Services India</a>
+                        <a href="#" class="text-sm">Tata Consultancy Solutions</a>
                     </div>
                     <h4 class="font-semibold text-5xl">Tata Consultancy Services India</h4>
                     <div class="flex items-center space-x-6 mt-2 text-gray-300">
-                        <a href="#overview">Overview</a><p>|</p>
-                        <a href="#method">How it Happened</a><p>|</p>
-                        <a href="#data-compromised">Data Compromised</a><p>|</p>
+                        <a href="#overview">Overview</a>
+                        <a href="#method">How it Happened</a>
+                        <a href="#data-compromised">Data Compromised</a>
                         <a href="#impact">Impact on the Company and Customers</a>
                     </div>
                 </div>
-                <a href="./assets/tata-consultancy-services.png" target="image-viewer"><img src="./assets/tata-consultancy-services.png" class="w-full h-96 mt-10 object-cover rounded-lg filter grayscale-0 hover:grayscale transition duration-300"></a>
+                <a href="./assets/tata-consultancy-services.png" target="image-viewer"><img src="./assets/tata-consultancy-services.png" class="w-full h-96 mt-10 object-cover rounded-lg"></a>
 			</div>
 		</div>
 
@@ -318,19 +318,19 @@
             <div class="space-y-4 bg-[#111436] p-8 border border-indigo-900 rounded-lg" id="method">
                 <h4 class="text-3xl font-medium text-purple-300">How the Breach Happened</h4>
                 <h1 class="text=xl font-medium">Anticipating Cyber Threats</h1>
-                <p class="pl-4 text-justify">- Given the lack of a major publicly reported breach, specific details on vulnerabilities or methods of attack exploited against TCS are not available in public sources. However, based on common cyberattack vectors, potential threats could include phishing campaigns targeting employees to steal credentials or introduce malware. These attacks often leverage social engineering tactics to trick individuals into divulging sensitive information or clicking malicious links.</p>
+                <p>Given the lack of a major publicly reported breach, specific details on vulnerabilities or methods of attack exploited against TCS are not available in public sources. However, based on common cyberattack vectors, potential threats could include phishing campaigns targeting employees to steal credentials or introduce malware. These attacks often leverage social engineering tactics to trick individuals into divulging sensitive information or clicking malicious links.</p>
                 <h1 class="text=xl font-medium">Exploiting the Gaps</h1>
-                <p class="pl-4 text-justify">- Another potential attack vector could involve exploiting unpatched software vulnerabilities in TCS's systems or those of its third-party vendors. Regularly updating and patching software is critical to prevent attackers from gaining unauthorized access. Weak passwords and inadequate access controls could also be exploited by malicious actors to compromise accounts and move laterally within</p>
+                <p>Another potential attack vector could involve exploiting unpatched software vulnerabilities in TCS's systems or those of its third-party vendors. Regularly updating and patching software is critical to prevent attackers from gaining unauthorized access. Weak passwords and inadequate access controls could also be exploited by malicious actors to compromise accounts and move laterally within</p>
             </div>
 
 
             <div class="space-y-4" id="data-compromised">
                 <h4 class="text-3xl font-medium text-purple-300">Data Compromised</h4>
                 <h5 class="text-xl font-medium">Client, IP, and Employee Information</h5>
-                <p class="pl-4 text-justify">- Without a publicly disclosed breach, the specific types of data that might be compromised in an attack on TCS cannot be definitively stated. However, as a large IT services provider, TCS handles a wide range of sensitive information, including client data, intellectual property, and employee personal information. The compromise of any of this data could have significant consequences.</p>
+                <p>Without a publicly disclosed breach, the specific types of data that might be compromised in an attack on TCS cannot be definitively stated. However, as a large IT services provider, TCS handles a wide range of sensitive information, including client data, intellectual property, and employee personal information. The compromise of any of this data could have significant consequences.</p>
 
                 <h5 class="text-xl font-medium">TCS’s Confidential Assets</h5>
-                <p class="pl-4 text-justify">- Depending on the nature and target of a hypothetical attack, compromised data could potentially include confidential business documents, source code, financial information, or personal details of employees or clients. The sensitivity of this information underscores the importance of robust security measures to prevent unauthorized access and exfiltration.</p>
+                <p>Depending on the nature and target of a hypothetical attack, compromised data could potentially include confidential business documents, source code, financial information, or personal details of employees or clients. The sensitivity of this information underscores the importance of robust security measures to prevent unauthorized access and exfiltration.</p>
             </div>
 
             <div class="space-y-4" id="impact">
@@ -340,7 +340,7 @@
 
             <!-- REFERENCES -->
             <div>
-                <details class="rounded border shadow" open>
+                <details class="rounded border border-indigo-900 shadow" open>
                     <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
                     References
                     </summary>
