--- a/continents/north-america.html
+++ b/continents/north-america.html
@@ -303,7 +303,7 @@
         
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 max-w-6xl mx-auto mt-24 gap-4 px-4">
             <!-- COMPANY 1 -->
-            <a href="/companies-north-america/yahoo.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+            <a href="north-america/yahoo.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="../assets/pictiure-north-america/yahoo(1).jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
@@ -312,7 +312,7 @@
             </a>
 
             <!-- COMPANY 2 -->
-            <a href="/companies-north-america/colonial-pipeline.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+            <a href="north-america/colonial-pipeline.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="../assets/pictiure-north-america/colonial-pipeline(1).jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
@@ -321,7 +321,7 @@
             </a>
 
             <!-- COMPANY 3 -->
-            <a href="../companies-north-america/equifax.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+            <a href="north-america/equifax.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="../assets/pictiure-north-america/Equifax(1).jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
@@ -330,7 +330,7 @@
             </a>
 
             <!-- COMPANY 4 -->
-            <a href="/companies-north-america/marriot-international.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+            <a href="north-america/marriot-international.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="../assets/pictiure-north-america/marriot(1).jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
@@ -339,7 +339,7 @@
             </a>
 
             <!-- COMPANY 5 -->
-            <a href="/companies-north-america/target-corporation.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+            <a href="north-america/target-corporation.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="../assets/pictiure-north-america/Target (2).jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
