--- a/continents/africa.html
+++ b/continents/africa.html
@@ -286,7 +286,7 @@
             </nav>
 
 			<div class="mt-10 max-w-7xl mx-auto">
-                <div class="flex items-center text-gray-300 space-x-2">
+                <div class="flex items-center text-gray-300 md:px-2 px-4 space-x-2">
                     <a class="text-sm" href="../companies-affected.html">Companies Affected</a>
                     <span class="text-gray-300 text-sm">/</span>
                     <a href="../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
@@ -300,7 +300,7 @@
 			</div>
 		</div>
 		
-        <div class="grid grid-cols-3 max-w-6xl mx-auto mt-24 gap-4">
+        <div class="grid md:grid-cols-3 grid-cols-1 max-w-6xl mx-auto mt-24 gap-4 md:px-2 px-4">
             <a href="../continents/africa/south-african-post-office.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="../assets/picture-africa/postoffice.png" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
