--- a/continents/north-america.html
+++ b/continents/north-america.html
@@ -286,7 +286,7 @@
             </nav>
 
 			<div class="mt-10 max-w-7xl mx-auto">
-                <div class="flex items-center text-gray-300 space-x-2">
+                <div class="flex items-center text-gray-300 md:px-2 px-4 space-x-2">
                     <a class="text-sm" href="../companies-affected.html">Companies Affected</a>
                     <span class="text-gray-300 text-sm">/</span>
                     <a href="../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
